fixed padding and alignment.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,10 @@
 }
 
 .item{
-  padding: 20px;
+  padding: 10px;
 }
 
+.time-left {
+  position: absolute;
+  width: 100%;
+}
